# robotics-libs

./: .gitignore
IKLibrary/: CMakeLists.txt  main.c
IKLibrary/src/ik/: chain.h  dh.h  link.h  matrix.h  pos.h
Kinematics/: CMakeLists.txt  main.cpp
Kinematics/Kinematics3D/: kinematics3d.cpp  kinematics3d.h
RobotKinematics/: CMakeLists.txt  main.cpp
RobotKinematics/RobotKinematics/: Calculator.h  Chain.h  DHParameters.h  IK.h  Joint.h  Matrix.h  pos3d.h
SimpleNN/: CMakeLists.txt  inputs.h  main.cpp
SimpleNN/SimpleNN/: nn.h
SimpleNeural/: CMakeLists.txt  kruiser.csv  main.cpp  networktools.h
SimpleNeural/neuralnet/: network.cpp  network.h  networkconfig.h  networklayer.cpp  networklayer.h  neuralmath.h
